做题记录用户同步、笔记、收藏、错题0616

--- a/TyDtk/Info.plist
+++ b/TyDtk/Info.plist
@@ -29,6 +29,10 @@
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string></string>
+	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
