智能做题 对接

--- a/TyDtk/Info.plist
+++ b/TyDtk/Info.plist
@@ -33,7 +33,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxb4ba3c02aa476ea1</string>
+				<string>wx5b46bf67c74352ac</string>
 			</array>
 		</dict>
 	</array>
